tests/ui/rustdoc/check-doc-alias-attr-location.stderr
error: allow, cfg, cfg_attr, deny, expect, forbid, and warn are the only allowed built-in attributes in function parameters
  --> $DIR/check-doc-alias-attr-location.rs:22:12
   |
LL |     fn foo(#[doc(alias = "qux")] _x: u32) -> Self::X {
   |            ^^^^^^^^^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on foreign module
  --> $DIR/check-doc-alias-attr-location.rs:9:7
   |
LL | #[doc(alias = "foo")]
   |       ^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on implementation block
  --> $DIR/check-doc-alias-attr-location.rs:12:7
   |
LL | #[doc(alias = "bar")]
   |       ^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on implementation block
  --> $DIR/check-doc-alias-attr-location.rs:18:7
   |
LL | #[doc(alias = "foobar")]
   |       ^^^^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on type alias in implementation block
  --> $DIR/check-doc-alias-attr-location.rs:20:11
   |
LL |     #[doc(alias = "assoc")]
   |           ^^^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on statement
  --> $DIR/check-doc-alias-attr-location.rs:24:15
   |
LL |         #[doc(alias = "stmt")]
   |               ^^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on expression
  --> $DIR/check-doc-alias-attr-location.rs:26:15
   |
LL |         #[doc(alias = "expr")]
   |               ^^^^^^^^^^^^^^

error: `#[doc(alias = "...")]` isn't allowed on match arm
  --> $DIR/check-doc-alias-attr-location.rs:28:19
   |
LL |             #[doc(alias = "arm")]
   |                   ^^^^^^^^^^^^^

error: aborting due to 8 previous errors

